--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
       "Say YES maybe?",
       "You know you want to 😌",
       "YES is the right answer 😉",
-      "Come onnnnn ❤️"
+      "Pichku plss ❤️",
+      "SHMUUU"
     ];
 
     noBtn.addEventListener("click", () => {
