--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <!-- Replace with your starting cute GIF -->
   <img class="media" id="mainGif" src="INITIAL_GIF_LINK_HERE" />
 
-  <h1>Priscilla, Will you be my Valentine? ❤️</h1>
+  <h1>Shmuuu, Will you be my Valentine? ❤️</h1>
 
   <div class="buttons">
     <button id="yesBtn">YES</button>
