--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <!-- ===== GIF 1: Initial GIF (Before any click) ===== -->
   <!-- Replace with your starting cute GIF -->
-  <img class="media" id="mainGif" src="INITIAL_GIF_LINK_HERE" />
+  <img class="media" id="mainGif" src="Cat Love GIF by Castaways.gif" />
 
   <h1>Shmuuu, Will you be my Valentine? ❤️</h1>
 
@@ -87,10 +87,10 @@
     let index = 0;
 
     // ===== GIF 2: Show when NO is clicked =====
-    const noGif = "NO_CLICK_GIF_LINK_HERE";
+    const noGif = "angry_face.png";
 
     // ===== GIF 3: Show when YES is clicked =====
-    const yesGif = "YES_CLICK_GIF_LINK_HERE";
+    const yesGif = "Happy Dance GIF.gif";
 
     const convincingTexts = [
       "Are you sure?",
